--- a/src/main/webapp/pages/credit/custom/custom_view.html
+++ b/src/main/webapp/pages/credit/custom/custom_view.html
@@ -25,7 +25,7 @@ var bodyContent = {
 			</tr>
 			<tr>
 				<td>公司名称</td>
-				<td>${item.company_id}</td>
+				<td>${item.companyName}</td>
 				<td>地址</td>
 				<td>${item.address}</td>
 			</tr>
@@ -39,7 +39,7 @@ var bodyContent = {
 				<td>传真</td>
 				<td>${item.fax}</td>
 				<td>国家</td>
-				<td>${item.country}</td>
+				<td>${item.countryName}</td>
 			</tr>
 			<tr>
 				<td>是否可用</td>
