--- a/src/main/webapp/pages/credit/whilte/whilte_view.html
+++ b/src/main/webapp/pages/credit/whilte/whilte_view.html
@@ -26,13 +26,13 @@ var bodyContent = {
 				<td>创建时间</td>
 				<td>${item.create_date,dateFormat="yyyy-MM-dd"}</td>
 				<td>上传人</td>
-				<td>${item.create_by}</td>
+				<td>${item.createName}</td>
 			</tr>
 			<tr>
 				<td>修改时间</td>
 				<td>${item.update_date,dateFormat="yyyy-MM-dd"}</td>
 				<td>修改人</td>
-				<td>${item.update_by}</td>
+				<td>${item.updateName}</td>
 			</tr>
 			<tr>
 				<td>备注</td>
