--- a/src/main/webapp/pages/credit/pricemanager/price_view.html
+++ b/src/main/webapp/pages/credit/pricemanager/price_view.html
@@ -26,7 +26,7 @@ var bodyContent = {
 			<tr>
 			<td>报告类型</td>
 			 <td> 
-			${model.orderSpeed!}
+			${model.reportType!}
 			</td>
 		</tr>
 		<tr>
