--- a/src/main/webapp/pages/credit/common/menu.html
+++ b/src/main/webapp/pages/credit/common/menu.html
@@ -27,7 +27,7 @@
                 </div>
                 <div class="user-content d-flex align-items-center justify-content-start">
                     <i class="fa fa-user"></i>
-                    <span>王羽铭</span>
+                    <span>${user.realname}</span>
                 </div>
             </div>
         </div>         
