--- a/src/main/webapp/pages/credit/usercenter/createOrder.html
+++ b/src/main/webapp/pages/credit/usercenter/createOrder.html
@@ -6,12 +6,12 @@
     <title>联信</title>
     <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1, user-scalable=no">
     <meta name="renderer" content="webkit">
-    <link rel="stylesheet" type="text/css" media="screen" href="../assets/bootstrap-4.1.1-dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="../assets/font-awesome-4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="../css/reset.css">
-    <link rel="stylesheet" href="../css/common.css">
-    <link rel="stylesheet" href="../css/menu.css">
-   	<link rel="stylesheet" href="../css/createOrder.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="/pages/credit/assets/bootstrap-4.1.1-dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="/pages/credit/assets/font-awesome-4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="/pages/credit/css/reset.css">
+    <link rel="stylesheet" href="/pages/credit/css/common.css">
+    <link rel="stylesheet" href="/pages/credit/css/menu.css">
+   	<link rel="stylesheet" href="/pages/credit/css/createOrder.css">
 </head>
 <body>
     <div class="container-fluid" id="menu">
@@ -28,7 +28,7 @@
 		    		<div class="user-info d-flex flex-column justify-content-center">
 		    			<ul class="breadcrumb">
 		    				<li class="breadcrumb-item">
-		    					<a href="#">首页</a>
+		    					<a href="index.html">首页</a>
 		    				</li>
 		    				<li class="breadcrumb-item active">
 		    					<a>新建订单</a>
@@ -156,10 +156,19 @@
 		                    <div class="input-group mt-2 col-md-6">
 		                        <label class="control-label col-md-4" for="">上传相关资料：</label>
 		                        <div class="form-control search-input uploadInformation col-md-8">
-		                        	<input type="file" name="" id="" value="" />
+		                        	<input type="file" name="" id="upload_file" value="" />
 		                        	<i class="fa fa-cloud-upload"></i>
 		                        	<p class="">请将上传的PDF、JPG、PNG、EXCEL、WORD文件拖至此处，大小不超过5M</p>
-		                        </div>                 
+								</div>
+								<div class="progress-box d-flex justify-content-around align-items-center">
+									<span class="filename">a.png</span>
+									<div class="progress">
+										<div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
+									</div>     
+									<button type="button" class="close" aria-label="Close">
+										<span aria-hidden="true">&times;</span>
+									</button>            
+								</div>
 		                    </div>
 		                </div>
 		    			<div class="form-group row d-flex justify-content-around mb-4">
@@ -170,7 +179,7 @@
 		                    <div class="input-group mt-2 col-md-6">
 		                    </div>
 		                </div>
-		    			<div class="form-group row d-flex justify-content-around mb-4">
+		    			<div class="form-group row d-flex justify-content-around mb-4 mt-5">
 		                    <div class="right-btn btn-group d-flex align-items-center justify-content-around mr-4 myBtn">
 		                    	<button type="button" id="btn_submit" class="btn btn-primary btn-submit">提交</button>
 		                    	<button type="button" id="btn_save" class="btn btn-light btn-save">保存</button>
@@ -186,10 +195,10 @@
     
     
    
-    <script src="../assets/jquery/jquery-2.1.0.js"></script>
-    <script src="../assets/bootstrap-4.1.1-dist/js/bootstrap.min.js"></script>
-    <script src="../js/common.js"></script>
-    <script src="../js/createOrder.js"></script>
+    <script src="/pages/credit/assets/jquery/jquery-2.1.0.js"></script>
+    <script src="/pages/credit/assets/bootstrap-4.1.1-dist/js/bootstrap.min.js"></script>
+    <script src="/pages/credit/js/common.js"></script>
+    <script src="/pages/credit/js/createOrder.js"></script>
    
 </body>
 </html>
