--- a/src/main/webapp/pages/credit/usercenter/index.html
+++ b/src/main/webapp/pages/credit/usercenter/index.html
@@ -101,7 +101,7 @@
                                  </div>
                             </form>
                             <div class="btn-row d-flex justify-content-between mt-4 mb-4">
-                                <a role="button" class="btn btn-primary ml-5 d-flex align-items-center" href="/credit/front/home/createOrder"><i class="fa fa-plus pr-2"></i>新增订单</a>
+                                <a id="addorder" role="button" class="btn btn-primary ml-5 d-flex align-items-center" href="/credit/front/home/createOrder"><i class="fa fa-plus pr-2"></i>新增订单</a>
                                 <div class="right-btn btn-group d-flex align-items-center justify-content-around mr-4">
                                     <button type="button" id="btn_query" class="btn btn-primary">查询</button>
                                     <button type="button" id="btn_reset" class="btn btn-light">重置</button>
