--- a/src/main/webapp/pages/admin/ordermanager/order_list.html
+++ b/src/main/webapp/pages/admin/ordermanager/order_list.html
@@ -2,7 +2,45 @@
 var headContent = {
 include("/pages/template/head.html"){}
 %>
-
+<script type="text/javascript">
+	$(function(){
+		$.get('/credit/front/home/getMessage',function(data){
+			getCustoms(data.customs);
+			getContient(data.continent);
+			getCountry(data.country);
+		})
+	});
+	function getCustoms(data){
+		var html=""
+		for(item in data){
+			html+="<option  value='"+data[item].id+"'>"+data[item].name+"</option>";
+		}
+		$("select[name='attr.custom_id']").append(html);
+	};
+	function getContient(data){
+		var html=""
+		for(item in data){
+			html+="<option  value='"+data[item].detail_id+"'>"+data[item].detail_name+"</option>";
+		}
+		$("select[name='attr.continent']").append(html);
+		
+	};
+	function getCountry(data){
+		var html=""
+		html+=html+="<option  value=''>请选择</option>";
+			for(item in data){
+				html+="<option  value='"+data[item].id+"'>"+data[item].name+"</option>";
+			}
+			$("select[name='attr.country']").html(html);
+	}
+	function getCountry2(){
+		var contient =$("select[name='attr.continent']").val();
+		$.get('/credit/front/home/getCountry?contient='+contient,function(data){
+			console.log(data)
+			getCountry(data);
+		})	
+	}
+</script>
 <script type="text/javascript">
     var oper;
     jQuery(function($) {
@@ -54,7 +92,6 @@ include("/pages/template/head.html"){}
 
 <%
 };
-
 var bodyContent = {
 %>
 <form name="form1" action="" method="post"  class="form-inline" role="form">
@@ -71,8 +108,29 @@ var bodyContent = {
 			<input class="form-control" type="text" name="attr.custom_id" value="${attr.custom_id!''}"
 				   placeholder="请输入客户代码" required='required' />
 		</div>
-
-
+		 <div class="form-group">
+             <input  name="attr.company_by_report" type="text" class="form-control"
+              placeholder="请输入公司名称" required='required' />
+         </div>
+		<div class="form-group">
+             <input  name="attr.right_company_name_en" type="text" class="form-control" 
+              placeholder="请输入订单公司名称" required='required' />
+   		</div>
+   		 <div class="form-group" >
+	           <select  name="attr.custom_id" class="form-control">
+	               <option value="" disabled selected>请选择客户</option>
+	           </select>
+	      </div>
+	       <div class="input-group">
+	            <select  name="attr.continent" class="form-control" onchange="getCountry2()">
+	                <option value="" disabled selected>请选择地区</option>
+	            </select>
+	        </div>
+	        <div class="input-group mt-2 col-md-4">
+                <select name="attr.country" class="form-control" >
+                    <option value="" disabled selected>请选择国家</option>
+                </select>
+        	</div>
 		<button type="button" class="btn btn-default" onclick="oper.list();" name="search">
 			<span class="glyphicon glyphicon-search"></span> 查 询
 		</button>
