--- a/src/main/webapp/pages/admin/ordermanager/order_list.html
+++ b/src/main/webapp/pages/admin/ordermanager/order_list.html
@@ -27,7 +27,7 @@ include("/pages/template/head.html"){}
 	};
 	function getCountry(data){
 		var html=""
-		html+=html+="<option  value=''>请选择</option>";
+		html+=html+="<option  value=''>请选择国家</option>";
 			for(item in data){
 				html+="<option  value='"+data[item].id+"'>"+data[item].name+"</option>";
 			}
@@ -104,10 +104,6 @@ var bodyContent = {
 			<input class="form-control" type="text" name="attr.id" value="${attr.id!''}"
 				   placeholder="请输入订单编号" required='required' />
 		</div>
-		<div class="form-group">
-			<input class="form-control" type="text" name="attr.custom_id" value="${attr.custom_id!''}"
-				   placeholder="请输入客户代码" required='required' />
-		</div>
 		 <div class="form-group">
              <input  name="attr.company_by_report" type="text" class="form-control"
               placeholder="请输入公司名称" required='required' />
@@ -121,12 +117,12 @@ var bodyContent = {
 	               <option value="" disabled selected>请选择客户</option>
 	           </select>
 	      </div>
-	       <div class="input-group">
+	       <div class="form-group">
 	            <select  name="attr.continent" class="form-control" onchange="getCountry2()">
 	                <option value="" disabled selected>请选择地区</option>
 	            </select>
 	        </div>
-	        <div class="input-group mt-2 col-md-4">
+	        <div class="form-group">
                 <select name="attr.country" class="form-control" >
                     <option value="" disabled selected>请选择国家</option>
                 </select>
