--- a/src/main/webapp/pages/credit/usercenter/create_order.html
+++ b/src/main/webapp/pages/credit/usercenter/create_order.html
@@ -69,7 +69,7 @@
 		    			<div class="form-group row d-flex justify-content-around mb-4">
 		                    <div class="input-group mt-2 col-md-6">
 		                        <label class="control-label col-md-4" for=""><span>*</span>接单日期：</label>
-		                        <input name="attr.receiver_date" valid="vselect" validname="接单日期" value="" type="text" class="form-control search-input col-md-8" id="client_order_date" disabled/>
+		                        <input name="attr.receiver_date" valid="vselect" validname="接单日期"  type="text" class="form-control search-input col-md-8" id="client_order_date" disabled/>
 		                    </div>
 		                    <div class="input-group mt-2 col-md-6">
 		                        <label class="control-label col-md-4" for=""><span>*</span>地区：</label>
@@ -203,6 +203,7 @@
 		    			<input name="id" type="hidden" value="0">
 		    			<input id="priceid" name="attr.price_id" type="hidden" value="0">
 		    			<input name="attr.source" type="hidden" value="0">
+		    			<input name="attr.end_date" type="hidden" value="0">
 		    			<!--<input type="submit" value=""/>-->
 		    		</form>
 		    	</div>
@@ -287,19 +288,19 @@
     	var value2=$("select[name='attr.speed']").find("option:selected").val();
     	var value3=$("select[name='attr.report_type']").find("option:selected").val();
     	var value4=$("select[name='attr.order_type']").find("option:selected").val();
+    	var value5=$("#client_order_date").val();
+    	console.log(value5);
    	 	var html="";
 	   	 $.ajax({
-		        url:"/admin/ordermanager/getTime?countrytype="+value1+"&speed="+value2+"&reporttype="+value3+"&ordertype="+value4,
+		        url:"/admin/ordermanager/getTime?countrytype="+value1+"&speed="+value2+"&reporttype="+value3+"&ordertype="+value4+"&ordertype="+value5,
 		        type:"get",
 		        dataType:"json",
 		        success: function(data) {
 		        	console.log(data)
 		        	  if(data!=null){
-		        		  $("input[name='attr.user_time']").val(data.use_time)
-		        		  $("input[name='attr.user_time_id']").val(data.id)
-		        		  var value=$("input[name='attr.receiver_date']").val()
-		        		  console.log(value)
-		        		  $("input[name='attr.receiver_date']").val(value)
+		        		  $("input[name='attr.user_time']").val(data.usetime.use_time)
+		        		  $("input[name='attr.user_time_id']").val(data.usetime.id)
+						  $("input[name='attr.end_date']").val(data.enddate)
 		        }
 		        },
 		    });
@@ -311,7 +312,7 @@
     	var value4=$("select[name='attr.order_type']").find("option:selected").val();
    	 	var html="";
 	   	 $.ajax({
-		        url:"admin/ordermanager/getPrice?countrytype="+value1+"&speed="+value2+"&reporttype="+value3+"&ordertype="+value4,
+		        url:"/admin/ordermanager/getPrice?countrytype="+value1+"&speed="+value2+"&reporttype="+value3+"&ordertype="+value4,
 		        type:"get",
 		        dataType:"json",
 		        success: function(data) {
