--- a/src/main/webapp/pages/system/user/user_list.html
+++ b/src/main/webapp/pages/system/user/user_list.html
@@ -160,6 +160,8 @@ var bodyContent = {
 				<a href="javascript:void(0);" class="btn btn-sm btn-primary" onclick="oper.edit(${item.userid});">修改</a>
 				<a href="javascript:void(0);" class="btn btn-sm btn-danger" onclick="oper.del(${item.userid});">删除</a>
 				<a href="javascript:void(0);" class="btn btn-sm btn-primary" onclick="oper.auth(${item.userid});">授权</a>
+				<a href="javascript:void(0);" class="btn btn-sm btn-primary" onclick="oper.auth(${item.userid});">手动分配</a>
+				<a href="javascript:void(0);" class="btn btn-sm btn-primary" onclick="oper.auth(${item.userid});">暂停分配</a>
 			</td>
 		</tr>
 		<% } %>
