--- a/src/main/webapp/pages/credit/usercenter/create_order.html
+++ b/src/main/webapp/pages/credit/usercenter/create_order.html
@@ -44,7 +44,7 @@
 		    	</div>
 		    	<!--表单-->
 		    	<div class="table-content p-3">
-		    		<form id="orderForm" class="form-inline" action="/credit/front/home/saveOrder" method="">
+		    		<form id="orderForm" class="form-inline" action="/credit/front/home/saveOrder" method="post">
 		    			<div class="form-group row d-flex justify-content-end mb-4">
 		                    <div class="right-btn btn-group d-flex align-items-center justify-content-around mr-4">
 		                    	<button type="button" id="btn_download" class="btn btn-primary"><i class="fa fa-download"></i>批量导入</button>
