--- a/src/main/webapp/pages/credit/company/company_list.html
+++ b/src/main/webapp/pages/credit/company/company_list.html
@@ -116,7 +116,7 @@ var paginator = function(page) {
 				<td>${item.legal}</td>
 				<td>${item.legal_en}</td>
 				<td>${item.registered_capital}</td>
-				<td>${item.currency}</td>  
+				<td>${item.Currency}</td>  
 			
 				<td>
 					<a href="javascript:void(0);" class="btn btn-sm btn-success"  onclick="oper.view(${item.id});">查看</a> 
