--- a/src/main/webapp/pages/credit/company/company_view.html
+++ b/src/main/webapp/pages/credit/company/company_view.html
@@ -51,7 +51,7 @@ var bodyContent = {
 		</tr>
 			<tr>
 			<td>币种</td>
-			<td> ${model.currency}</td>
+			<td> ${model.Currency}</td>
 
 		</table>
 	<div style="height: 50px;clear: both;">&nbsp;</div>
