--- a/src/main/webapp/pages/system/user/user_list.html
+++ b/src/main/webapp/pages/system/user/user_list.html
@@ -38,6 +38,14 @@ include("/pages/template/head.html"){}
                     form1.action = url;
                     form1.submit();
                 });
+            },
+            update : function(id) {
+                var url = 'system/user/update/'+id;
+                var title = '确认要修改该状态？';
+                Confirm(title, function() {
+                    form1.action = url;
+                    form1.submit();
+                });
             }
             ,auth : function(id) {
                 var url = 'system/user/auth/'+id;
@@ -160,8 +168,8 @@ var bodyContent = {
 				<a href="javascript:void(0);" class="btn btn-sm btn-primary" onclick="oper.edit(${item.userid});">修改</a>
 				<a href="javascript:void(0);" class="btn btn-sm btn-danger" onclick="oper.del(${item.userid});">删除</a>
 				<a href="javascript:void(0);" class="btn btn-sm btn-primary" onclick="oper.auth(${item.userid});">授权</a>
-				<a href="javascript:void(0);" class="btn btn-sm btn-primary" onclick="oper.auth(${item.userid});">手动分配</a>
-				<a href="javascript:void(0);" class="btn btn-sm btn-primary" onclick="oper.auth(${item.userid});">暂停分配</a>
+				<a href="javascript:void(0);" class="btn btn-sm btn-primary" onclick="oper.update(${item.userid});">手动分配</a>
+				<a href="javascript:void(0);" class="btn btn-sm btn-primary" onclick="oper.update(${item.userid});">暂停分配</a>
 			</td>
 		</tr>
 		<% } %>
