--- a/src/main/webapp/pages/credit/mail/mail_list.html
+++ b/src/main/webapp/pages/credit/mail/mail_list.html
@@ -116,7 +116,7 @@ var bodyContent = {
 					<td>
 						${item.create_date}
 					</td>  
-					<td>${item.enabled}</td>
+					<td>${item.enabledName}</td>
 				<td>
 				<a href="javascript:void(0);" class="btn btn-sm btn-primary" onclick="oper.edit(${item.mail_id});">修改</a> 
 				<a href="javascript:void(0);" class="btn btn-sm btn-primary" onclick="oper.enabled(${item.mail_id});">禁用</a> 
