订单流程后台公共模板

--- a/src/main/webapp/pages/credit/usercenter/order_allocation.html
+++ b/src/main/webapp/pages/credit/usercenter/order_allocation.html
@@ -6,15 +6,15 @@
     <title>联信</title>
     <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1, user-scalable=no">
     <meta name="renderer" content="webkit">
-    <link rel="stylesheet" type="text/css" media="screen" href="../../assets/bootstrap-4.1.1-dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="../../assets/bootstrap-table/css/bootstrap-table.min.css">
-    <link rel="stylesheet" href="../../assets/bootstrap-table/css/bootstrap-table-fixed-columns.css">
-    <link rel="stylesheet" href="../../assets/font-awesome-4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="../../assets/animate/animate.css">
-    <link rel="stylesheet" href="../../css/reset.css">
-    <link rel="stylesheet" href="../../css/common.css">
-    <link rel="stylesheet" href="../../css/menu.css">
-    <link rel="stylesheet" href="../../css/order_manage/order_allocation.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="${BASE_PATH }static/credit/assets/bootstrap-4.1.1-dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="${BASE_PATH }static/credit/assets/bootstrap-table/css/bootstrap-table.min.css">
+    <link rel="stylesheet" href="${BASE_PATH }static/credit/assets/bootstrap-table/css/bootstrap-table-fixed-columns.css">
+    <link rel="stylesheet" href="${BASE_PATH }static/credit/assets/font-awesome-4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="${BASE_PATH }static/credit/assets/animate/animate.css">
+    <link rel="stylesheet" href="${BASE_PATH }static/credit/css/reset.css">
+    <link rel="stylesheet" href="${BASE_PATH }static/credit/css/common.css">
+    <link rel="stylesheet" href="${BASE_PATH }static/credit/css/menu.css">
+    <link rel="stylesheet" href="${BASE_PATH }static/credit/css/order_manage/order_allocation.css">
 </head>
 <body>
     <div class="container-fluid">
@@ -55,7 +55,7 @@
                            </div>
                            <table id="table"
                                data-toggle="table"
-                               data-url="../data.json"
+                               data-url="data.json"
                                style="position: relative"
                            >
                             <div class="deal-state"> 
@@ -165,13 +165,13 @@
             <footer></footer>
         </div>
     </div>
-    <script src="../../assets/jquery/jquery-2.1.0.js"></script>
-    <script src="../../assets/popper/popper.min.js"></script>
-    <script src="../../assets/bootstrap-4.1.1-dist/js/bootstrap.min.js"></script>
-    <script src="../../assets/bootstrap-table/js/bootstrap-table.js"></script>
-    <script src="../../assets/bootstrap-table/js/bootstrap-table-fixed-columns.js"></script>
-    <script src="../../assets/bootstrap-table/js/bootstrap-table-zh-CN.min.js"></script> 
-    <script src="../../js/common.js"></script>
-    <script src="../../js/order_manage/order_allocation.js"></script>
+    <script src="${BASE_PATH }static/credit/assets/jquery/jquery-2.1.0.js"></script>
+    <script src="${BASE_PATH }static/credit/assets/popper/popper.min.js"></script>
+    <script src="${BASE_PATH }static/credit/assets/bootstrap-4.1.1-dist/js/bootstrap.min.js"></script>
+    <script src="${BASE_PATH }static/credit/assets/bootstrap-table/js/bootstrap-table.js"></script>
+    <script src="${BASE_PATH }static/credit/assets/bootstrap-table/js/bootstrap-table-fixed-columns.js"></script>
+    <script src="${BASE_PATH }static/credit/assets/bootstrap-table/js/bootstrap-table-zh-CN.min.js"></script> 
+    <script src="${BASE_PATH }static/credit/js/common.js"></script>
+    <script src="${BASE_PATH }static/credit/js/order_manage/order_allocation.js"></script>
 </body>
 </html>
